syntax = "proto3";

package basketspb;

message BasketStarted {
  string id = 1;
  string customer_id = 2;
}

message BasketCanceled {
  string id = 1;
}

message BasketCheckedOut {
  message Item {
    string store_id = 1;
    string product_id = 2;
    string store_name = 3;
    string product_name = 4;
    double price = 5;
    int32 quantity = 6;
  }
  string id = 1;
  string customer_id = 2;
  string payment_id = 3;
  repeated Item items = 4;
}
